--- a/app/app/templates/index.html
+++ b/app/app/templates/index.html
@@ -99,7 +99,8 @@
         <div id="recommendations"></div>
     </div>
 
-    <script src="/static/js/recommendations.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ url_for('static', path='js/recommendations.js') }}"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const interestInput = document.getElementById('interestInput');
@@ -175,6 +176,5 @@
             });
         });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
